[package]
name = "linya"
version = "0.3.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Simple concurrent progress bars."
homepage = "https://github.com/fosskers/linya"
repository = "https://github.com/fosskers/linya"
readme = "README.md"
license = "MIT"
keywords = ["cli", "progress", "bar"]
categories = ["command-line-interface"]
exclude = ["screenshots/*"]

[badges]
github = { repository = "fosskers/linya", branch = "master", workflow = "Tests" }

[dependencies]
terminal_size = "0.1"
# spinoff = { version = "0.4", optional = true }
spinoff = "0.4"

[dev-dependencies]
curl = "0.4"
rand = "0.8"
rayon = "1.5"
version-sync = "0.9"

# [features]
# spinner = ["dep:spinoff"]
